evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_doc_comments.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

// Severity levels for log output
enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
}

// Application configuration settings
message Config {
    // The API key used for authentication
    string api_key = 1;
    // Request timeout in milliseconds
    uint64 timeout_ms = 2;
}
