evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_durations.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

message Timer {
    message Limit {
        uint64 secs = 1;
        uint32 nanos = 2;
    }
    message Grace {
        uint64 secs = 1;
        uint32 nanos = 2;
    }
    message LapsItem {
        uint64 secs = 1;
        uint32 nanos = 2;
    }
    string id = 1;
    // protoc-gen-validate cannot check: a duration of at most 8h
    Limit limit = 2;
    // protoc-gen-validate cannot check: a duration above 1m
    optional Grace grace = 3;
    repeated LapsItem laps = 4;
}
