evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_enum_adjacently_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

message Event {
    message Scroll {
    }
    oneof variant {
        .ClickData click = 1;
        string key_press = 2;
        Scroll scroll = 3;
    }
}

message ClickData {
    int32 x = 1;
    int32 y = 2;
}
