evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_enum_internally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

message Shape {
    message Point {
    }
    oneof variant {
        .CircleData circle = 1;
        .RectangleData rectangle = 2;
        Point point = 3;
    }
}

message CircleData {
    double radius = 1;
}

message RectangleData {
    double width = 1;
    double height = 2;
}
