evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_enum_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

message Value {
    message Nothing {
    }
    oneof variant {
        string text = 1;
        double number = 2;
        bool flag = 3;
        Nothing nothing = 4;
    }
}
