evenframe_core/tests/snapshots/snapshot_tests__protobuf_validated__protobuf_validated_nested_struct.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
syntax = "proto3";

message Address {
    string street = 1;
    string city = 2;
}

message Person {
    string name = 1;
    .Address home_address = 2;
    optional .Address work_address = 3;
}
